changed spacing to correct text and image overlap

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@
 
 
 .cat-tree-image{
-  height: 150px;
+  height: 175px;
 }
 
 .header{
